* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 

#### 0.8.1 (2010-??-??) ###############################

* FIXED: Handling of non ASCII characters with Nokogiri parsing in Ruby 1.9
* FIXED:  warning in Ruby 1.9
* CHANGE: Don't attempt to convert parameters or headers to ERB templates.


#### 0.8.0 (2010-01-16) ###############################

NOTE: The configuration language changed slightly in this release. 
See the README for more information on what needs to be updated. 

* FIXED: HTTP auth failures
* FIXED: Request timeouts should count towards failures
* FIXED: Stella::Client ID was changing between requests in certain conditions
* FIXED: HTTP delete now works correctly
* FIXED: Missing rsequential method in Container
* FIXED: Don't override user agent header when specified
* FIXED: variables testplan example. 
* FIXED: Print reports again when load test is interrupted 
* FIXED: Sporadic ERB template error under high concurrency
* CHANGE: A proper message displayed when no host specified
* CHANGE: Don't append httpclient info to User-Agent header
* CHANGE: param and header helper methods now return strings instead of Procs.
* CHANGE: Verbosity level 2 now prints only params, 3 w/ headers, 4 w/ body
* ADDED: follow responses can contain definition blocks
* ADDED: Support for specifying default path prefix on CLI
* ADDED: Support for specifying timeouts
* ADDED: Friendly error for empty request configs


#### 0.7.7 (2009-12-05) ###############################

* FIXED: JSON parse error when nil body 
* FIXED: URI query parameter encoding
* CHANGE: Removed Stella::Testplan::Stats
* CHANGE: Better output for errors during functional tests
* CHANGE: Global variables now implemented in Stella::Testplan.global
  and can be used like usecase and request resources.
* CHANGE: Variable replacement now checks the client container 
  resources before the usecase resources. 
* ADDED: Stella::Testplan#to_json